plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'br.ufop.brTomaz'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    jcenter()
}

javafx {
    version = "12"
    modules = ['javafx.controls', 'javafx.fxml']
}

mainClassName = "br.ufop.brTomaz.MainApplication"

applicationDefaultJvmArgs = ["--add-exports=javafx.graphics/com.sun.javafx.stage = ALL-UNNAMED",
                             "--add-opens=javafx.controls/javafx.scene.control.skin = ALL-UNNAMED",
                             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
]

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8'
    compile 'org.kordamp.ikonli:ikonli-javafx:11.3.3'
    compile 'org.kordamp.ikonli:ikonli-fontawesome-pack:11.3.3'
}
